RESOLVED FIXED289438
Block box is self collapsing when non-zero percentage height can't be resolved
https://bugs.webkit.org/show_bug.cgi?id=289438
Summary Block box is self collapsing when non-zero percentage height can't be resolved
alan
Reported 2025-03-09 13:40:17 PDT
ssia
Attachments
[fast-cq]Patch (8.53 KB, patch)
2025-03-09 14:17 PDT, alan
no flags
alan
Comment 1 2025-03-09 14:17:48 PDT
Created attachment 474503 [details] [fast-cq]Patch
Radar WebKit Bug Importer
Comment 2 2025-03-09 22:45:26 PDT
EWS
Comment 3 2025-03-10 06:03:34 PDT
Committed 291890@main (c543f831d7a8): <https://commits.webkit.org/291890@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 474503 [details].
Ahmad Saleem
Comment 4 2025-03-10 09:52:47 PDT
*** Bug 289143 has been marked as a duplicate of this bug. ***
Ahmad Saleem
Comment 5 2026-04-10 23:03:36 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59116
Note You need to log in before you can comment on or make changes to this bug.