Block box is self collapsing when non-zero percentage height can't be resolved https://bugs.webkit.org/show_bug.cgi?id=289438#

Reviewed by Antti Koivisto.

1. In standards mode, we should only look at the containing block to see if non-zero
percent height can be resolved when checking if (self) margins are adjacent.
2. Drop the table cell check. It is incorrect.

This patch aligns WebKit with Blink / Chromium.

Credit goes to: https://chromium-review.googlesource.com/c/chromium/src/+/1617833
(Originally merged by Ahmad Saleem)

* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/normal-flow/margin-collapse-through-percentage-height-block-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/normal-flow/margin-collapse-through-percentage-height-block-inside-table-cell-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/normal-flow/margin-collapse-through-percentage-height-block-inside-table-cell.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/CSS2/normal-flow/margin-collapse-through-percentage-height-block.html: Added.
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::isSelfCollapsingBlock const):

Canonical link: https://commits.webkit.org/291890@main